# flask-app

./: .gitignore  README.md  pyproject.toml  server.py
Files-blog-with-users/: README.md  blog.db  forms.py  main.py  pyproject.toml  render.yaml
Files-blog-with-users/templates/: about.html  contact.html  footer.html  header.html  index.html  login.html  post.html  register.html
cafe-api/: README.md  cafe-api.http  main.py  pyproject.toml
cafe-api/instance/: cafes.db
demo/: package.json
flask-auth-start/: .gitignore  README.md  main.py  pyproject.toml
flask-auth-start/templates/: base.html  login.html  register.html
flask-movie-app/: pyproject.toml
flask-movie-app/movie_library/: __init__.py  routes.py
flask-portfolio/: .gitignore  README.md  main.py  pyproject.toml
flask-portfolio/portfolio/: __init__.py
habit-tracker/: README.md  app.py
lib-crud/: README.md  main.py  pyproject.toml
lib-crud/instance/: books-collection.db
lib-crud/templates/: add.html  edit.html  index.html
microblog/: README.md
project-quote-generator/: .gitignore  README.md  demo.js  package-lock.json
python-basics/: main.py  pyproject.toml
python-basics/habit-tracker/: .gitignore  pyproject.toml  routes.py
python-basics/microblog/: main.py
python-basics/static/: styles.css
python-basics/templates/: home.html
static/: blog.css  style.css  tindog.css
templates/: blog.html  index.html  login.html  tindog.html
tindog/: .gitignore  README.md  pyproject.toml
tindog/oop/: README.md  main.py
top-10-movies/: README.md  main.py  pyproject.toml
(+42 files in other folders)
